force-app/main/default/objects/Partner_Portal_Content__c/Partner_Portal_Content__c.object-meta.xml
<CustomObject>
    <description>Stores the content for the portal banner based on the record data created for a given region</description>
    <label>Partner Portal Content</label>
    <nameField>
        <displayFormat>PPC-{0}</displayFormat>
        <label>Partner Content Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Portal Contents</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>