force-app/main/default/objects/Partner_Portal_Content__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox is ticked if Slide is being used.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>