force-app/main/default/objects/Partner_Portal_Content__c/fields/Button_Text__c.field-meta.xml
<CustomField>
    <fullName>Button_Text__c</fullName>
    <description>Text displayed on the Button.</description>
    <label>Button Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>