force-app/main/default/objects/Partner_Portal_Content__c/fields/Button_URL__c.field-meta.xml
<CustomField>
    <fullName>Button_URL__c</fullName>
    <description>Navigates to this URL when the button is clicked.</description>
    <label>Button URL</label>
    <type>Url</type>
</CustomField>