force-app/main/default/objects/Partner_Portal_Content__c/fields/Button_Visible__c.field-meta.xml
<CustomField>
    <fullName>Button_Visible__c</fullName>
    <description>Flag to determine the visibility of button on partner portal</description>
    <defaultValue>false</defaultValue>
    <label>Button Visible</label>
    <type>Checkbox</type>
</CustomField>