force-app/main/default/objects/Partner_Portal_Content__c/fields/Home_Page_Text__c.field-meta.xml
<CustomField>
    <fullName>Home_Page_Text__c</fullName>
    <description>Field to capture home page text</description>
    <label>Home Page Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>