force-app/main/default/objects/Partner_Portal_Content__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <description>This field holds the Url of Image</description>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>