force-app/main/default/objects/Partner_Portal_Content__c/fields/ImageCSS__c.field-meta.xml
<CustomField>
    <fullName>ImageCSS__c</fullName>
    <description>For storing the Image url CSS.</description>
    <label>ImageCSS</label>
    <length>250</length>
    <type>Text</type>
</CustomField>