force-app/main/default/objects/Partner_Portal_Content__c/fields/Quick_Links_Label__c.field-meta.xml
<CustomField>
    <fullName>Quick_Links_Label__c</fullName>
    <description>This field holds the quick link label on partner portal</description>
    <label>Quick Links Label</label>
    <length>250</length>
    <type>Text</type>
</CustomField>