force-app/main/default/objects/Partner_Portal_Content__c/fields/Quick_Links_URL__c.field-meta.xml
<CustomField>
    <fullName>Quick_Links_URL__c</fullName>
    <description>URL for the Quick Link to be used on Illumina Partner Portal.</description>
    <label>Quick Links URL</label>
    <type>Url</type>
</CustomField>