force-app/main/default/objects/Partner_Portal_Content__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Name of the region to which a particular Slide will be displayed.</description>
    <label>Region</label>
`   <trackHistory>true</trackHistory>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>