force-app/main/default/objects/Partner_Portal_Content__c/fields/Slide_Name__c.field-meta.xml
<CustomField>
    <fullName>Slide_Name__c</fullName>
    <description>Holds Slide name on partner portal</description>
    <label>Slide Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>