force-app/main/default/objects/Partner_Portal_Content__c/fields/Slide_Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Slide_Subtitle__c</fullName>
    <description>Text below the title.</description>
    <label>Slide Subtitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>