force-app/main/default/objects/Partner_Portal_Content__c/fields/Slide_Title__c.field-meta.xml
<CustomField>
    <fullName>Slide_Title__c</fullName>
    <description>This field is to capture the title on partner portal</description>
    <label>Slide Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>