force-app/main/default/objects/Partner_Portal_Content__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>This field is used to sort the order of buttons containing URL&apos;s in help page of ICPP</description>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>