force-app/main/default/objects/Partner_Portal_Content__c/fields/Terms_of_Use_Version__c.field-meta.xml
<CustomField>
    <fullName>Terms_of_Use_Version__c</fullName>
    <description>This field is used to hold the version terms</description>
    <label>Terms of Use Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>