force-app/main/default/objects/Partner_Portal_Content__c/fields/Video_URL__c.field-meta.xml
<CustomField>
    <fullName>Video_URL__c</fullName>
    <description>Stores the URL of the Video to be shown on Partner Portal Home Page</description>
    <label>Video URL</label>
    <type>Url</type>
</CustomField>