force-app/main/default/objects/Partner_Portal_Content__c/recordTypes/help.recordType-meta.xml
<RecordType>
    <fullName>help</fullName>
    <active>true</active>
    <description>Used to manage the buttons displayed in Help page.</description>
    <label>help</label>
</RecordType>