force-app/main/default/objects/Partner_Portal_Content__c/recordTypes/Slides.recordType-meta.xml
<RecordType>
    <fullName>Slides</fullName>
    <active>true</active>
    <label>Slides</label>
</RecordType>