force-app/main/default/objects/Partner_Portal_Content__c/recordTypes/Terms_of_Use_Versions.recordType-meta.xml
<RecordType>
    <fullName>Terms_of_Use_Versions</fullName>
    <active>true</active>
    <label>Terms of Use Versions</label>
</RecordType>