force-app/main/default/objects/Partner_Portal_Content__c/listViews/Inactive_Slides.listView-meta.xml
<ListView>
    <fullName>Inactive_Slides</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Region__c</columns>
    <columns>Slide_Name__c</columns>
    <columns>Slide_Title__c</columns>
    <columns>Slide_Subtitle__c</columns>
    <columns>Button_Text__c</columns>
    <columns>Button_URL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Partner_Portal_Content__c.Slides</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive Slides</label>
    <language>en_US</language>
</ListView>