force-app/main/default/objects/Partner_Portal_Content__c/listViews/Terms_of_Use_Version.listView-meta.xml
<ListView>
    <fullName>Terms_of_Use_Version</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Terms_of_Use_Version__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Partner_Portal_Content__c.Terms_of_Use_Versions</value>
    </filters>
    <label>Terms of Use Version</label>
</ListView>